# effibemviewer

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Gltf_notebook.ipynb  LICENSE  README.md  gltf.py  gltf_viewer.html.j2  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  javascript.md  online-loader.md  usage.md
effibemviewer/: __init__.py  __main__.py  gltf.py
effibemviewer/templates/: effibemviewer.css.j2  effibemviewer.html.j2  effibemviewer.js.j2  gltf_viewer.html.j2
installation/: index.html
javascript/: index.html
online-loader/: index.html
public/cdn/: effibemviewer.css  effibemviewer.js  effibemviewer.min.css  effibemviewer.min.js  index.html
public/embedded/: index.html
search/: search_index.json
tests/: test_cli.py  test_gltf.py
usage/: index.html
