[tool.poetry]
name = "effibemviewer"
version = "0.2.1"
description = "A 3D viewer for OpenStudio building energy models using GLTF and Three.js"
authors = ["Julien Marrec <contact@effibem.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "effibemviewer" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.urls]
Homepage = "https://effibem.com"
Documentation = "https://jmarrec.github.io/effibemviewer"
Repository = "https://github.com/jmarrec/effibemviewer"
Changelog = "https://github.com/jmarrec/effibemviewer/blob/main/CHANGELOG.md"
Issues = "https://github.com/jmarrec/effibemviewer/issues"

[tool.poetry.scripts]
effibemviewer = "effibemviewer.__main__:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
openstudio = { version = "^3.4", allow-prereleases = true }
jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
black = "^26.1"
isort = "^7.0"
pytest = "^9.0"
pytest-cov = "^6.0"
mypy = "^1.19"
flake8 = "^7.0"
flake8-pyproject = "^1.2"
twine = "^6.0"
bump2version = "^1.0.1"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"
mkdocs-include-markdown-plugin = "^7.2.1"
mkdocs-material = "^9.7.1"
mkdocstrings = "^1.0.2"
mkdocstrings-python = "^2.0.1"
mkdocs-autorefs = "^1.4.3"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E402", "D100"]
per-file-ignores = ["__init__.py:F401,D104"]
docstring-convention = "google"
exclude = [
    ".git",
    "__pycache__",
    "setup.py",
    "build",
    "dist",
    "docs",
    "releases",
    ".venv",
    ".tox",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".github",
]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
# omit =

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
env_list = ["py310", "py312", "format", "lint", "build"]

[tool.tox.env_run_base]
allowlist_externals = ["poetry"]
pass_env = ["*"]
set_env = {PYTHONPATH = "{tox_root}", PYTHONWARNINGS = "ignore"}
commands_pre = [["poetry", "install", "--with", "dev"]]

[tool.tox.env.py310]
commands = [["poetry", "run", "pytest", "--cov=effibemviewer", "--cov-branch", "--cov-report=xml", "--cov-report=term-missing", "tests"]]

[tool.tox.env.py312]
commands = [["poetry", "run", "pytest", "--cov=effibemviewer", "--cov-branch", "--cov-report=xml", "--cov-report=term-missing", "tests"]]

[tool.tox.env.format]
commands = [
    ["poetry", "run", "isort", "effibemviewer"],
    ["poetry", "run", "black", "effibemviewer", "tests"]
]

[tool.tox.env.lint]
commands = [
    ["poetry", "run", "flake8", "effibemviewer", "tests"],
    ["poetry", "run", "mypy", "effibemviewer", "tests"]
]

[tool.tox.env.build]
commands_pre = [["poetry", "install", "--with", "dev,doc"]]
commands = [
    ["poetry", "build"],
    ["poetry", "run", "mkdocs", "build"],
    ["poetry", "run", "twine", "check", "dist/*"]
]

[tool.tox.gh-actions]
python = """
    3.10: py310
    3.12: py312, format, lint, build
"""
